--- a/frontend/views/microarea.html
+++ b/frontend/views/microarea.html
@@ -41,10 +41,10 @@
         </ul>
     </nav>
     <main>
-        <span class="titleMicroarea">
-            <h2 id="bairroTitulo">Bairro</h2>
+        <span class="title">
+            <h2>Bairro</h2>
         </span>
-        <div class="btnNovaMicroarea">
+        <div class="btnNovo">
             <button id="novaMicroarea">Nova Familia</button>
         </div>
         
@@ -53,11 +53,11 @@
                 <h2>Cadastrar Familia</h2>
                 <label for="nomeMicroarea">Responsavel</label>
                 <div class="componentesM">
-                    <i class="fa-solid fa-location-dot"></i><input type="text" name="nomeResponsavel" id="nomeResponsavel" placeholder="Nome Completo" required>
+                    <i class="fa-solid fa-user"></i><input type="text" name="nomeResponsavel" id="nomeResponsavel" placeholder="Nome Completo" required>
                 </div>
                 <label for="numDependentes">Numero de Dependentes:</label>
                 <div class="componentesM">
-                    <i class="fa-solid fa-location-dot"></i><input type="text" name="numDependentes" id="numDependentes" placeholder="ex:3" required>
+                    <i class="fa-solid fa-people-group"></i><input type="text" name="numDependentes" id="numDependentes" placeholder="ex:3" required>
                 </div>
                 <label for="familia-bairro">Bairro:</label>
                 <div class="componentesM">
@@ -65,13 +65,13 @@
                 </div>
                 <label for="familia-rua">Rua:</label>
                 <div class="componentesM">
-                    <i class="fa-solid fa-location-dot"></i><input type="text" name="familia-rua" id="familia-rua" placeholder="ex: Rua Tenente Nicolau Lopes" required>
+                    <i class="fa-solid fa-road"></i><input type="text" name="familia-rua" id="familia-rua" placeholder="ex: Rua Tenente Nicolau Lopes" required>
                 </div>
-                <label for="familia-numero">Numero:</label>
+                <label for="familia-numero">Numero da Casa:</label>
                 <div class="componentesM">
-                    <i class="fa-solid fa-location-dot"></i><input type="number" name="familia-numero" id="familia-numero" placeholder="ex:205" required>
+                    <i class="fa-solid fa-house-circle-check"></i><input type="number" name="familia-numero" id="familia-numero" placeholder="ex:205" required>
                 </div>
-                <div class="btnsMicroarea">
+                <div class="btnsCadastro">
                     <button id="criarMicroarea" action="/familia">Criar</button>
                     <button id="fechar">Fechar</button>
                 </div>
@@ -93,7 +93,6 @@
     </main>
     <script src="../public/javaScript/addMicroarea.js"></script>
     <script src="../public/javaScript/dadosMicroarea.js"></script>
-    <script src="../public/javaScript/menuLateral.js"></script>
     <script src="../public/javaScript/menuLateral.js"></script>
 </body>
 </html>
