--- a/SMAAS/views/detalhesMicroarea.html
+++ b/SMAAS/views/detalhesMicroarea.html
@@ -8,13 +8,13 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="Microarea">
-    <nav class="menuLateral">
+        <nav class="menuLateral">
         <div class="btn-expandir">
             <i class="fa-solid fa-bars" id="btnExpandir"></i>
         </div>
         <ul>
             <li class="item-menu">
-                <a href="#">
+                <a href="../views/conta.html">
                     <span class="icone"><i class="fa-solid fa-user"></i></span>
                     <span class="txt-link">Conta</span>
                 </a>
@@ -39,10 +39,12 @@
             </li>
         </ul>
     </nav>
+   
     <main>
-        <span class="title">
+        <div class="title">
             <h2>Detalhes da Familia</h2>
-        </span>
+            <div class="title-familia"></div>
+        </div>
         <div class="btnNovo">
             <button id="novoPaciente">Novo Paciente</button>
         </div>
@@ -131,7 +133,7 @@
         </div>
     </main>
     <script src="../public/javaScript/addPaciente"></script>
-    <script src="../public/javaScript/script_detalhesMicroarea"></script>
+    <script src="../public/javaScript/script_detalhesMicroarea.js"></script>
     <script src="../public/javaScript/menuLateral.js"></script>
 </body>
 </html>
