--- a/SMAAS/views/sobre.html
+++ b/SMAAS/views/sobre.html
@@ -45,7 +45,7 @@
                         <img src="../public/image/ft-perfil-eros.jpg" alt="eros-franklin">
                     </div>
                     <h3>Eros Franklin Soares Felix</h3>
-                    <h4>FrontEnd</h4>
+                    <h4>Dev. FrontEnd</h4>
                     <a href=""><i class="fa-brands fa-github"></i></a>
                 </div>
                 <div class="desenvolvedor">
@@ -53,7 +53,7 @@
                         <img src="../public/image/ft-perfil-jgui.jpg" alt="jose-guilherme" id="gui">
                     </div>
                     <h3>Jose Guilherme Morato Bizerra de Lima</h3>
-                    <h4>BackEnd</h4>
+                    <h4>Dev. BackEnd</h4>
                     <a href="https://github.com/JoseGuilherme0"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <div class="desenvolvedor">
@@ -61,7 +61,7 @@
                         <img src="../public/image/ft-perfil-francisco.jpg" alt="francisco" id="francisco">
                     </div>
                     <h3>Francisco Chagas Neto</h3>
-                    <h4>BackEnd</h4>
+                    <h4>Dev. BackEnd</h4>
                     <a href="https://github.com/ImFranciscoNeto"><i class="fa-brands fa-github"></i></a>
                 </div>
                 <div class="desenvolvedor">
