Alteracao no texto sobre o projeto.

--- a/SMAAS/views/sobre.html
+++ b/SMAAS/views/sobre.html
@@ -28,9 +28,8 @@
         </div>
     </header>
     <section class="descricao">
-        <p>SMAAS ( Sistema de Monitoramento de Atividades dos Agentes de Saude ), tem como objetivo <strong>agrupar os dados relacionados à agentes de saúde</strong>, desde suas <strong>informações básicas pessoais</strong> até os <strong>registros da comunidade na qual está encarregado de ajudar</strong>, visando uma <strong>melhor organização desses dados</strong> e uma <strong>dinamização dos processos de atendimento.</strong>
-        Os agentes cadastrados no sistema poderao ter <strong>maior controle de sua(s) microarea(s)</strong>, podendo adiconar <strong>mais pessoas e seus respectivos dados.</strong>
-        
+        <p>SMAAS ( Sistema de Monitoramento de Atividades dos Agentes de Saude ), tem como objetivo <strong>agrupar os dados relacionados à agentes de saúde</strong>, desde suas <strong>informações básicas pessoais</strong> até os <strong>registros das pessoas da comunidade na qual está encarregado de ajudar</strong>, visando uma <strong>melhor organização de dados</strong> e uma <strong>dinamização dos processos de atendimento.</strong>
+        Os agentes cadastrados no sistema poderão ter <strong>maior controle de sua(s) microarea(s), visitas e pacientes.</strong> 
         
         </p>
     </section>
